//must be the first line in the file
syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "FashionShop.ProductService.Protos";

service SyncQuantity {
  rpc SyncQuantityFromProduct(google.protobuf.Empty) returns (ListProductResponse);
}

message ProductResponse {
  string product_id = 1;
  int32 quantity = 2;
}
message ListProductResponse{
	repeated ProductResponse products = 1;
}